--- a/components.css
+++ b/components.css
@@ -108,6 +108,7 @@
 	color: var(--white-1);
 	background: var(--green-1);
 	margin-top: 50px;
+	margin: 50px;
 	border-color: #faa403;
 }
 @media only screen and (min-width: 700px) {
